fix blog item link color and animate horizontal ruler on dark mode transition

--- a/stylesheets/components/Blog/BlogItem.module.sass
+++ b/stylesheets/components/Blog/BlogItem.module.sass
@@ -1,14 +1,12 @@
 @import "../../../utils/colorPalette"
-
-$animation-duration: .15s
+@import "../../../utils/animationTimer"
 
 .blogItemLink
-  font-family: Roboto, sans-serif
+  color: $midnight-black
   h4, h6, p
-    transition: color $animation-duration ease
-  &:hover h4
-    color: $dark-blue
-  &:hover h6,  &:hover p
+    transition: color $colorTransitionDuration ease
+  &:hover h4, &:hover h6, &:hover p
+    transition: color $hoverColorTransitionDuration ease
     color: $dark-blue
 
 .blogItemLinkDark
