--- a/stylesheets/components/Util/HorizontalRuler.module.sass
+++ b/stylesheets/components/Util/HorizontalRuler.module.sass
@@ -1,7 +1,9 @@
 @import "../../../utils/colorPalette.sass"
+@import "../../../utils/animationTimer"
 
-.clearBorder
+.main
   border: none
+  transition: border-top $colorTransitionDuration
 
 .dark
   border-top: 1px solid $grey
